# chosen-visualizer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
installer/: Cargo.toml
installer/src/: main.rs
src/: app.rs  audio.rs  main.rs  settings.rs  tray.rs  updater.rs  visualizer.rs  window_control.rs
