[package]
name = "chosen-visualizer"
version = "1.0.5"
edition = "2024"

[dependencies]
eframe = "0.29"
raw-window-handle = "0.6"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
image = { version = "0.25", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ico = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
tray-item = "0.10"

