[package]
name = "chosen-visualizer-installer"
version = "1.0.0"
edition = "2024"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
